--- a/src/popups/result-failed/result-failed.component.html
+++ b/src/popups/result-failed/result-failed.component.html
@@ -4,11 +4,13 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-26 13:04:43
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-26 13:05:10
+ * @LastEditTime: 2021-10-26 15:02:44
 -->
 <div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image [imgData]="popupBg"></app-image>
   <app-image-button [imgData]="closeBtn" (itemClick)="closePo()"></app-image-button>
   <app-image-button [imgData]="okBtn" (itemClick)="retry()"></app-image-button>
+  <app-popup-text-field [textData]="scoreText" [text]="'+'+score"></app-popup-text-field>
+  <app-popup-text-field [textData]="timeCountdownText" [text]="''+timeCountdownNumber"></app-popup-text-field>
 </div>
