--- a/src/popups/result-win/result-win.component.html
+++ b/src/popups/result-win/result-win.component.html
@@ -4,13 +4,14 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-27 10:21:17
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-27 10:39:00
+ * @LastEditTime: 2021-10-27 11:24:40
 -->
 <div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image [imgData]="popupBg"></app-image>
   <app-image-button [imgData]="closeBtn" (itemClick)="closePo()"></app-image-button>
   <app-image-button [imgData]="okBtn" (itemClick)="retry()"></app-image-button>
+  <img class="productImg lightTextShadow" [src]="productImg"/>
   <div class="noneSelect">
     <app-image [imgData]="coinIcon"></app-image>
     <app-popup-text-field [textData]="priceText" [text]="price+''"></app-popup-text-field>
