--- a/src/pages/my/video-record/record-item/record-item.component.html
+++ b/src/pages/my/video-record/record-item/record-item.component.html
@@ -1,3 +1,17 @@
-<p>
-  record-item works!
-</p>
+<!--
+ * @Description: 
+ * @version: 1.0
+ * @Author: Wayne Yu
+ * @Date: 2021-09-14 11:43:09
+ * @LastEditors: Wayne Yu
+ * @LastEditTime: 2021-10-27 17:23:15
+-->
+<div class="ticketItem" [style.top]="index * 146 + 10 + 'px'" #itemInList>
+  <!-- <app-image [imgData]="itemBg"></app-image>
+  <app-image [imgData]="arrow"></app-image>
+  <app-image [imgData]="mainIcon"></app-image>
+  <div class="lightTextShadow">
+    <app-popup-text-field [textData]="tipText" [text]="tipString"></app-popup-text-field>
+  </div>
+  <a href="{{linkString}}" *ngIf="outLink" target="{{linkTarget}}"><div class="outLick"></div></a> -->
+</div>
