--- a/src/pages/my/video-record/record-item/record-item.component.html
+++ b/src/pages/my/video-record/record-item/record-item.component.html
@@ -4,14 +4,12 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-14 11:43:09
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-27 17:23:15
+ * @LastEditTime: 2021-10-27 18:02:50
 -->
-<div class="ticketItem" [style.top]="index * 146 + 10 + 'px'" #itemInList>
-  <!-- <app-image [imgData]="itemBg"></app-image>
-  <app-image [imgData]="arrow"></app-image>
-  <app-image [imgData]="mainIcon"></app-image>
-  <div class="lightTextShadow">
-    <app-popup-text-field [textData]="tipText" [text]="tipString"></app-popup-text-field>
-  </div>
-  <a href="{{linkString}}" *ngIf="outLink" target="{{linkTarget}}"><div class="outLick"></div></a> -->
+<div class="ticketItem" [style.top]="index * 201 + 10 + 'px'" #itemInList>
+  <app-image [imgData]="itemBg"></app-image>
+  <img [src]="this.itemData.img" class="productImg"/>
+  <app-image [imgData]="winIcon" *ngIf="isWin"></app-image>
+  <app-image [imgData]="playBtn"></app-image>
+  <app-image [imgData]="shareBtn"></app-image>
 </div>
