--- a/src/pages/my/video-record/record-item/record-item.component.html
+++ b/src/pages/my/video-record/record-item/record-item.component.html
@@ -4,12 +4,12 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-14 11:43:09
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-27 18:02:50
+ * @LastEditTime: 2021-10-28 09:42:36
 -->
 <div class="ticketItem" [style.top]="index * 201 + 10 + 'px'" #itemInList>
   <app-image [imgData]="itemBg"></app-image>
   <img [src]="this.itemData.img" class="productImg"/>
   <app-image [imgData]="winIcon" *ngIf="isWin"></app-image>
-  <app-image [imgData]="playBtn"></app-image>
-  <app-image [imgData]="shareBtn"></app-image>
+  <app-scroll-list-button [imgData]="playBtn" (itemClick)="play()"></app-scroll-list-button>
+  <app-scroll-list-button [imgData]="shareBtn" (itemClick)="share()"></app-scroll-list-button>
 </div>
