--- a/src/pages/my/video-record/record-list/record-list.component.html
+++ b/src/pages/my/video-record/record-list/record-list.component.html
@@ -4,10 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-27 16:38:00
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-27 16:43:11
+ * @LastEditTime: 2021-10-28 09:45:24
 -->
 <div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
   <div class="scrollArea" [style.top]="scrollY + 'px'">
-    <app-record-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onItemClick($event)"></app-record-item>
+    <app-record-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-record-item>
   </div>
 </div>
