--- a/src/pages/lobby/category-bar/category-bar.component.html
+++ b/src/pages/lobby/category-bar/category-bar.component.html
@@ -4,13 +4,13 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-28 13:39:24
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-28 14:44:43
+ * @LastEditTime: 2021-10-28 17:40:31
 -->
 <div class="categoryPart">
   <app-image [imgData]="iconListBg"></app-image>
   <div class="categoryContainer widthApp">
     <div class="iconScrollArea" #carousel>
-      <img [src]="icon.class_img" *ngFor="let icon of categoryList; let i = index" [style.left]="iconPosition(i) + 'px'" class="categoryIcon">
+      <img [src]="icon.class_img" *ngFor="let icon of showingIcons; let i = index" [style.left]="iconPosition(i) + 'px'" class="categoryIcon">
     </div>
   </div>
   <app-image [imgData]="iconListMask"></app-image>
