--- a/src/service/ui/head-bar/head-bar.component.css
+++ b/src/service/ui/head-bar/head-bar.component.css
@@ -12,3 +12,19 @@
   border-radius:40px;
   overflow: hidden;
 }
+.redPot{
+  left: 710px;
+  top: 10px;
+  width: 32px;
+  height: 32px;
+  background-color: red;
+  color: black;
+  font-size: 25px;
+  line-height: 32px;
+  vertical-align: middle;
+  -moz-border-radius: 32px;
+  -webkit-border-radius: 32px;
+  border-radius:32px;
+  text-align: center;
+  font-family: "arialbd";
+}
