--- a/src/pages/my/ledger/ledger-item/ledger-item.component.html
+++ b/src/pages/my/ledger/ledger-item/ledger-item.component.html
@@ -4,8 +4,11 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-01 10:51:28
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-01 10:59:13
+ * @LastEditTime: 2021-11-01 12:01:31
 -->
-<div class="ticketItem" [style.top]="index * 201 + 10 + 'px'" #itemInList>
+<div class="ticketItem" [style.top]="index * 138 + 5 + 'px'" #itemInList>
+  <!-- <div>
+    {{itemCreatedTime}}
+  </div> -->
   <app-image [imgData]="itemBg"></app-image>
 </div>
