--- a/src/pages/my/ledger/ledger-item/ledger-item.component.css
+++ b/src/pages/my/ledger/ledger-item/ledger-item.component.css
@@ -9,3 +9,41 @@
     border-radius: 34px;
     border: 2px solid #067252;
 }
+.timeDiv{
+    left: 15px;
+    top: 20px;
+    font-size: 25px;
+    line-height: 40px;
+    font-family: "arialbd";
+}
+.noteDiv{
+    left: 180px;
+    top: 45px;
+    font-size: 25px;
+    width: 150px;
+    color: gray;
+    font-family: "arialbd";
+}
+.changeDiv{
+    left: 580px;
+    top: 37px;
+    font-size: 40px;
+    width: 50px;
+    text-align: right;
+    font-family: "FRAHV_0";
+    color: white;
+}
+.addColor{
+    right: 0px;
+    text-stroke: 2px #004e97;
+    -webkit-text-stroke: 2px #004e97;
+    -moz-text-stroke: 2px #004e97;
+    -ms-text-stroke: 2px #004e97;
+}
+.msColor{
+    right: 0px;
+    text-stroke: 2px #c5641d;
+    -webkit-text-stroke: 2px #c5641d;
+    -moz-text-stroke: 2px #c5641d;
+    -ms-text-stroke: 2px #c5641d;
+}
