--- a/src/pages/my/address/address.component.html
+++ b/src/pages/my/address/address.component.html
@@ -4,9 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-01 17:32:02
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-01 17:34:05
+ * @LastEditTime: 2021-11-02 09:42:49
 -->
 <div class="stretchingBg widthApp" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
-  <app-image [imgData]="title"></app-image>
   <app-image-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-image-button>
+  <div class="addressListContainer" [style.height]="pageHeight - 255 + 'px'"></div>
+  <app-head-bar></app-head-bar>
 </div>
