--- a/src/service/ui/coin/coin.component.html
+++ b/src/service/ui/coin/coin.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-08-30 13:47:49
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-21 13:24:08
+ * @LastEditTime: 2021-11-02 11:45:02
 -->
-<div class="mc noneSelect" [style.left]="x+'px'" [style.top]="y+'px'" [style.transform]="matrix" [hidden]="!this.uiInit" #mc>
-  <img [src]="movieClipData" (load)="bgTextureLoaded()"/>
+<div class="mc noneSelect" [style.left]="x+'px'" [style.top]="y+'px'" [style.transform]="matrix" #mc>
+  <img [src]="movieClipData"/>
 </div>
