--- a/src/siene/loading-and-po/loading-layer/loading-and-po.component.html
+++ b/src/siene/loading-and-po/loading-layer/loading-and-po.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-20 10:43:20
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-21 13:57:09
+ * @LastEditTime: 2021-11-03 16:26:53
 -->
-<div class="loadingContainer widthApp" [style.height]="mainHeight+'px'" [style.background-image]="loadingBg" [hidden]="!showingLoading">
+<div class="loadingContainer stretchingBg widthApp" [style.height]="mainHeight+'px'" [style.background-image]="loadingBg" [hidden]="!showingLoading">
   <div class="loadingShadow"></div>
   <app-popup-layer></app-popup-layer>
   <div class="widthApp" [hidden]="!showLoadingGif" [style.height]="mainHeight+'px'">
