--- a/src/pages/lobby/lobby/lobby.component.html
+++ b/src/pages/lobby/lobby/lobby.component.html
@@ -4,10 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-24 13:22:49
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-28 14:16:38
+ * @LastEditTime: 2021-11-03 16:41:37
 -->
 <app-banner></app-banner>
-<app-product-list [textureData]="textureData" [pageHeight]="pageHeight" (itemClick)="onProductItemClick($event)" [categoryId]="currentCategoryId"></app-product-list>
+<app-product-list [textureData]="textureData" [productAreaHeight]="pageHeight-365" (itemClick)="onProductItemClick($event)" [categoryId]="currentCategoryId"></app-product-list>
 <app-category-bar [textureData]="textureData" [categoryList]="categorys" (categoryChange)="onCategoryChange($event)"></app-category-bar>
 <app-head-bar></app-head-bar>
 <app-bottom-bar></app-bottom-bar>
