--- a/src/pages/my/address/address-item/address-item.component.html
+++ b/src/pages/my/address/address-item/address-item.component.html
@@ -4,14 +4,14 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-02 13:12:46
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-03 15:12:35
+ * @LastEditTime: 2021-11-03 17:09:25
 -->
 <div [style.top]="index * 308 + 5 + 'px'" #itemInList>
   <app-image [imgData]="itemBg"></app-image>
   <app-image [imgData]="defaultIcon" *ngIf="index==0"></app-image>
-  <app-image-button [imgData]="defaultBtn" *ngIf="index!=0"></app-image-button>
-  <app-image-button [imgData]="editorBtn"></app-image-button>
-  <app-image-button [imgData]="deleteBtn"></app-image-button>
   <div class="firstLine"><span class="spanBold">{{itemData.first_name}}&nbsp;&nbsp;{{itemData.last_name}}</span><span class="spanGray">{{itemData.tel}}</span></div>
   <div class="allElse">{{mainString}}</div>
+  <app-scroll-list-button [imgData]="defaultBtn" (itemClick)="changeDefault()" *ngIf="index!=0"></app-scroll-list-button>
+  <app-scroll-list-button [imgData]="editorBtn"></app-scroll-list-button>
+  <app-scroll-list-button [imgData]="deleteBtn"></app-scroll-list-button>
 </div>
