--- a/src/pages/my/contact-us/contact-scroll/contact-scroll.component.html
+++ b/src/pages/my/contact-us/contact-scroll/contact-scroll.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-04 16:02:21
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-04 17:21:25
+ * @LastEditTime: 2021-11-05 10:55:37
 -->
 <div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
   <div class="scrollArea" [style.top]="scrollY + 'px'">
@@ -14,9 +14,9 @@
       <div class="leftText">
         <app-popup-text-field [textData]="emailText" [text]="'Email'"></app-popup-text-field>
         <app-popup-text-field [textData]="nameText" [text]="'Name'"></app-popup-text-field>
-        <app-image [imgData]="inputBg1"></app-image>
-        <app-image [imgData]="inputBg2"></app-image>
-        <input type="text" class="inputText" formControlName="emailAddress" id="emailTextInput" [style.top]="'0px'">
+        <app-scroll-text-input [imgData]="inputBg1" [inputRect]="inputRect" [fontSize]="35" [defautText]="'email'"></app-scroll-text-input>
+        <app-scroll-text-input [imgData]="inputBg2"></app-scroll-text-input>
+        <!-- <input type="text" class="inputText" formControlName="emailAddress" id="emailTextInput" [style.top]="'0px'"> -->
         <input type="text" class="inputText" formControlName="userName" id="nameTextInput"  [style.top]="'100px'">
       </div>
       <div class="choise">
