--- a/src/basicUI/scrollList/scroll-text-area/scroll-text-area.component.html
+++ b/src/basicUI/scrollList/scroll-text-area/scroll-text-area.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-05 11:55:15
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-05 12:13:29
+ * @LastEditTime: 2021-11-05 13:32:31
 -->
 <div class="imgCom" [attr.style]="imgStyle">
-  <textArea class="inputText" id="textInput" [attr.style]="textInputStyle" (focus)="textOnfocus()" (blur)="textOnblur()" (change)="onTextChange()" autocomplete="off" #textInput></textArea>
+  <textArea class="inputText" id="textInput" [attr.style]="textInputStyle" (focus)="textOnfocus()" (blur)="textOnblur()" (change)="onTextChange()" (input)="onTextChange()" autocomplete="off" #textInput></textArea>
 </div>
