--- a/src/pages/my/edit-address/address-edit-scroll/address-edit-scroll.component.html
+++ b/src/pages/my/edit-address/address-edit-scroll/address-edit-scroll.component.html
@@ -4,19 +4,19 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-05 14:11:34
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-05 15:40:20
+ * @LastEditTime: 2021-11-05 16:12:44
 -->
 <div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
   <div class="scrollArea" [style.top]="scrollY + 'px'">
-    <app-scroll-text-input [imgData]="firstNameInput" [inputRect]="inputRect" [fontSize]="30" [align]="'center'" [defautText]="'email'" [text]="firstName" (textChange)="firstNameChange($event)"></app-scroll-text-input>
-    <app-scroll-text-input [imgData]="lasetNameInput" [inputRect]="inputRect" [fontSize]="30" [align]="'center'" [defautText]="'email'" [text]="lasetName" (textChange)="lasetNameChange($event)"></app-scroll-text-input>
-    <app-scroll-text-input [imgData]="phoneNumInput" [inputRect]="inputRect" [fontSize]="30" [align]="'center'" [defautText]="'email'" [text]="phoneNum" (textChange)="phoneNumChange($event)"></app-scroll-text-input>
-    <app-scroll-text-input [imgData]="emailInput" [inputRect]="inputRect" [fontSize]="30" [align]="'center'" [defautText]="'email'" [text]="email" (textChange)="emailChange($event)"></app-scroll-text-input>
-    <app-scroll-text-input [imgData]="countryInput" [inputRect]="inputRect" [fontSize]="30" [align]="'center'" [defautText]="'email'" [text]="country" (textChange)="countryChange($event)"></app-scroll-text-input>
-    <app-scroll-text-input [imgData]="stateInput" [inputRect]="inputRect" [fontSize]="30" [align]="'center'" [defautText]="'email'" [text]="state" (textChange)="stateChange($event)"></app-scroll-text-input>
-    <app-scroll-text-input [imgData]="cityInput" [inputRect]="inputRect" [fontSize]="30" [align]="'center'" [defautText]="'email'" [text]="city" (textChange)="cityChange($event)"></app-scroll-text-input>
-    <app-scroll-text-area [imgData]="addressStringInput" [inputRect]="inputRect"  [fontSize]="30" [defautText]="'Text input'" [text]="addressString" (textChange)="addressStringChange($event)"></app-scroll-text-area>
-    <app-scroll-text-input [imgData]="zipCodeInput" [inputRect]="inputRect" [fontSize]="30" [align]="'center'" [defautText]="'email'" [text]="zipCode" (textChange)="zipCodeChange($event)"></app-scroll-text-input>
-    <app-image [imgData]="saveBtn"></app-image>
+    <app-scroll-text-input [imgData]="firstNameInput" [inputRect]="nameRect" [fontSize]="30" [align]="'center'" [defautText]="'first name'" [text]="firstName" (textChange)="firstNameChange($event)" [font]="'FRABK_0'" [weight]="'600'"></app-scroll-text-input>
+    <app-scroll-text-input [imgData]="lasetNameInput" [inputRect]="nameRect" [fontSize]="30" [align]="'center'" [defautText]="'last name'" [text]="lasetName" (textChange)="lasetNameChange($event)" [font]="'FRABK_0'" [weight]="'600'"></app-scroll-text-input>
+    <app-scroll-text-input [imgData]="phoneNumInput" [inputRect]="inputRect" [fontSize]="30" [align]="'center'" [defautText]="'cellphone num'" [text]="phoneNum" (textChange)="phoneNumChange($event)" [font]="'FRABK_0'" [weight]="'600'"></app-scroll-text-input>
+    <app-scroll-text-input [imgData]="emailInput" [inputRect]="inputRect" [fontSize]="30" [align]="'center'" [defautText]="'e-mail address'" [text]="email" (textChange)="emailChange($event)" [font]="'FRABK_0'" [weight]="'600'"></app-scroll-text-input>
+    <app-scroll-text-input [imgData]="countryInput" [inputRect]="inputRect" [fontSize]="30" [align]="'center'" [defautText]="'country'" [text]="country" (textChange)="countryChange($event)" [font]="'FRABK_0'" [weight]="'600'"></app-scroll-text-input>
+    <app-scroll-text-input [imgData]="stateInput" [inputRect]="inputRect" [fontSize]="30" [align]="'center'" [defautText]="'state/province'" [text]="state" (textChange)="stateChange($event)" [font]="'FRABK_0'" [weight]="'600'"></app-scroll-text-input>
+    <app-scroll-text-input [imgData]="cityInput" [inputRect]="inputRect" [fontSize]="30" [align]="'center'" [defautText]="'city'" [text]="city" (textChange)="cityChange($event)" [font]="'FRABK_0'" [weight]="'600'"></app-scroll-text-input>
+    <app-scroll-text-area [imgData]="addressStringInput" [inputRect]="addressStrRect"  [fontSize]="30" [defautText]="'house number & community'" [text]="addressString" (textChange)="addressStringChange($event)" [font]="'FRABK_0'" [weight]="'600'"></app-scroll-text-area>
+    <app-scroll-text-input [imgData]="zipCodeInput" [inputRect]="inputRect" [fontSize]="30" [align]="'center'" [defautText]="'zip code'" [text]="zipCode" (textChange)="zipCodeChange($event)" [font]="'FRABK_0'" [weight]="'600'"></app-scroll-text-input>
+    <app-scroll-list-button [imgData]="saveBtn" (itemClick)="saveAddress()"></app-scroll-list-button>
   </div>
 </div>
