--- a/src/pages/my/edit-address/edit-address.component.html
+++ b/src/pages/my/edit-address/edit-address.component.html
@@ -4,12 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-04 10:13:45
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-05 16:19:41
+ * @LastEditTime: 2021-11-08 12:06:31
 -->
 <div class="stretchingBg widthApp" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
-  <app-image-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-image-button>
-  <div class="addressListContainer" [style.height]="pageHeight - 250 + 'px'">
-    <app-address-edit-scroll [listHeight]="pageHeight - 270" [listData]="[addressData]" [textureData]="textureData" [textureJson]="textureJson"></app-address-edit-scroll>
-  </div>
+  <app-address-edit-scroll [listHeight]="pageHeight" [listData]="[addressData]" [textureData]="textureData" [textureJson]="textureJson"></app-address-edit-scroll>
   <app-head-bar></app-head-bar>
 </div>
