--- a/src/popups/delete-address/delete-address.component.html
+++ b/src/popups/delete-address/delete-address.component.html
@@ -4,11 +4,12 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-03 17:37:02
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-03 17:41:18
+ * @LastEditTime: 2021-11-08 14:16:04
 -->
 <div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image [imgData]="popupBg"></app-image>
+  <div class="confirmText">Do you want to delete this address?</div>
   <app-image-button [imgData]="closeBtn" (itemClick)="closePo()"></app-image-button>
   <app-image-button [imgData]="confirmBtn" (itemClick)="confirmPo()"></app-image-button>
 </div>
