--- a/src/service/ui/head-bar/head-bar.component.html
+++ b/src/service/ui/head-bar/head-bar.component.html
@@ -4,12 +4,13 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 13:36:53
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-29 13:02:16
+ * @LastEditTime: 2021-11-08 17:03:04
 -->
 <div class="head">
   <app-image [imgData]="topBarBg"></app-image>
   <div class="facebookHead">
-    <img src="{{headIcon}}" width="80" height="80">
+    <img class="headImg" src="assets/default_head.png" width="80" height="80">
+    <img class="headImg" src="{{headIcon}}" width="80" height="80">
   </div>
   <app-image-button [imgData]="headMask"  (itemClick)="gotoUserCenter()"></app-image-button>
   <app-image [imgData]="vipIcon" *ngIf="isVip"></app-image>
