--- a/src/siene/dynamic-layer/dynamic-layer.component.html
+++ b/src/siene/dynamic-layer/dynamic-layer.component.html
@@ -1,1 +1,11 @@
+<!--
+ * @Description: 
+ * @version: 1.0
+ * @Author: Wayne Yu
+ * @Date: 2021-05-21 11:30:23
+ * @LastEditors: Wayne Yu
+ * @LastEditTime: 2021-11-08 17:19:20
+-->
 <ng-template dynamicContainer></ng-template>
+<app-head-bar [hidden]="!hasHead"></app-head-bar>
+<app-bottom-bar [hidden]="!hasBotton"></app-bottom-bar>
