--- a/src/basicUI/movie-clip/movie-clip.component.css
+++ b/src/basicUI/movie-clip/movie-clip.component.css
@@ -3,5 +3,6 @@
     overflow: hidden;
     -webkit-user-select: none;
     -moz-user-select: none;
+    user-select: none;
     pointer-events: none;
 }
