--- a/src/basicUI/image-scale-button/image-scale-button.component.css
+++ b/src/basicUI/image-scale-button/image-scale-button.component.css
@@ -6,5 +6,6 @@
     position: absolute;
     -webkit-user-select: none;
     -moz-user-select: none;
+    user-select: none;
     pointer-events: none;
 }
