--- a/src/pages/order-for-goods/order-for-goods.component.css
+++ b/src/pages/order-for-goods/order-for-goods.component.css
@@ -1,10 +1,18 @@
 .orderListContainer{
-    background-color: #FDC43F;
+    background-color: #fdd53f;
     left: 10px;
-    top: 220px;
+    top: 286px;
     width: 730px;
     -moz-border-radius: 28px;
     -webkit-border-radius: 28px;
     border-radius: 28px;
     border: 3px solid #ad8321;
+}
+.noOrder{
+    left: 100px;
+    top: 620px;
+    width: 550px;
+    text-align: center;
+    font-size: 45px;
+    font-family: framd;
 }
