--- a/src/siene/dynamic-layer/dynamic-layer.component.html
+++ b/src/siene/dynamic-layer/dynamic-layer.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-21 11:30:23
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-08 17:19:20
+ * @LastEditTime: 2021-11-09 16:20:27
 -->
 <ng-template dynamicContainer></ng-template>
 <app-head-bar [hidden]="!hasHead"></app-head-bar>
-<app-bottom-bar [hidden]="!hasBotton"></app-bottom-bar>
+<app-bottom-bar [hidden]="!hasBotton" [iconBigIndex]="menuIndex"></app-bottom-bar>
